# DiFfRG

./: update_DiFfRG.sh
Nikolas/QuarkMesonDiquarkComplexPotential/: .gitignore  CMakeLists.txt  QMD.cc  model.hh  myPhasediagram.py  myTuningV2withDiquarks.py  myTuningV3.py  myTuningV3Regulator.py  parameter.json
Nikolas/QuarkMesonDiquarkComplexPotential/TuningResults/: lambdaPhi_100.15238597984069_m2Phi_0.26322652171825595_m2D_0.6664392412318554.json  lambdaPhi_100.2529775629026_m2Phi_0.29046583658153247_m2D_3.0750482892318214.json  lambdaPhi_100.58677240346819_m2Phi_0.6129669451109614_m2D_1.456836633186384.json  lambdaPhi_101.14256571727681_m2Phi_0.2710174906588205_m2D_1.8950331562229779.json  lambdaPhi_101.78729358625367_m2Phi_0.17322218221039695_m2D_0.8075994376428106.json  lambdaPhi_102.09259715906647_m2Phi_0.5133167305074245_m2D_1.3985320197126188.json  lambdaPhi_102.73210744020342_m2Phi_-0.0992387558153765_m2D_0.691593916028387.json  lambdaPhi_102.77972325795457_m2Phi_0.1547328142790149_m2D_1.0827014900882295.json  lambdaPhi_103.67934808788958_m2Phi_0.1196484462491185_m2D_0.6582161801786178.json  lambdaPhi_104.00128901029146_m2Phi_-0.12416173978806799_m2D_1.3379782671147296.json  lambdaPhi_104.15467925881399_m2Phi_0.16238598193877446_m2D_0.6366250055570781.json  lambdaPhi_104.35497413280801_m2Phi_0.1236366354593384_m2D_0.5932863588635069.json  lambdaPhi_104.37126944849729_m2Phi_0.11360761832498362_m2D_0.6524529061945655.json  lambdaPhi_104.48562588802577_m2Phi_0.20355521902863172_m2D_0.5936434082957899.json  (+279 more)
(+113 files in other folders)
